--- a/IconChanger/zh-Hans.lproj/Localizable.strings
+++ b/IconChanger/zh-Hans.lproj/Localizable.strings
@@ -2,8 +2,7 @@
   Localizable.strings
   IconChanger
 
-  Created by 朱浩宇 on 2022/12/23.
-  Localization for Chinese (Simplified) added on 2024/03/20
+  Created by Bengerthelorf on 2025/03/21.
   
 */
 
