更新 ChangeView、IconRes 和 ImageView 相关文件，添加图标加载状态管理和别名设置功能，同时优化了本地化字符串支持。

--- a/IconChanger/fr.lproj/Localizable.strings
+++ b/IconChanger/fr.lproj/Localizable.strings
@@ -46,3 +46,10 @@
 "Changes will take full effect after restarting the app" = "Les changements prendront pleinement effet après le redémarrage de l'application";
 "Language Changed" = "Langue modifiée";
 "The language has been changed. For the best experience, please restart the application." = "La langue a été modifiée. Pour une meilleure expérience, veuillez redémarrer l'application.";
+
+// New translation keys
+"No Icons Found" = "Aucune icône trouvée";
+"Try different search keywords" = "Essayez différents mots-clés de recherche";
+"No Icon" = "Pas d'icône";
+"You can modify the alias name for better results" = "Vous pouvez modifier l'alias pour de meilleurs résultats";
+"Set Alias Name" = "Définir un alias";
