--- a/IconChanger/en.lproj/Localizable.strings
+++ b/IconChanger/en.lproj/Localizable.strings
@@ -46,3 +46,10 @@
 "Changes will take full effect after restarting the app" = "Changes will take full effect after restarting the app";
 "Language Changed" = "Language Changed";
 "The language has been changed. For the best experience, please restart the application." = "The language has been changed. For the best experience, please restart the application.";
+
+// New translation keys
+"No Icons Found" = "No Icons Found";
+"Try different search keywords" = "Try different search keywords";
+"No Icon" = "No Icon";
+"You can modify the alias name for better results" = "You can modify the alias name for better results";
+"Set Alias Name" = "Set Alias Name";
